A/k8s-dev/service-state-redis.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service-state-redis
spec:
  replicas: 1
  selector:
    matchLabels:
      app: service-state-redis
  template:
    metadata:
      labels:
        app: service-state-redis
    spec:
      containers:
        - name: service-state-redis
          image: redis
          resources:
            limits:
              memory: "1Gi"
            requests:
              memory: "256Mi"
          volumeMounts:
            - mountPath: /data 
              name: redis-storage
      volumes:
        - name: redis-storage
          persistentVolumeClaim:
            claimName: redis-pvc

---
apiVersion: v1
kind: Service
metadata:
  name: service-state-redis
spec:
  selector:
    app: service-state-redis
  ports:
    - name: db
      protocol: TCP
      port: 6379
      targetPort: 6379

---

apiVersion: v1
kind: Service
metadata:
  name: service-state-redis
spec:
  type: LoadBalancer
  ports:
  - port: 6379
    targetPort: 6379
  selector:
    app: service-state-redis
